compiler/tests/fixtures/valid/minimal_action.viv
// Minimal action with a single initiator role

action greet:
    roles:
        @greeter:
            as: initiator
