compiler/tests/fixtures/invalid/semantics/reaction_without_bindings.viv
// Reaction without a bindings clause

action trigger:
    roles:
        @actor:
            as: initiator
    reactions:
        queue action trigger:
            urgent: true
